# realtime_audio_demo

./: .gitignore  README.md  app.py  pyproject.toml  qwen3_omni.py  run_demo.sh  run_demo_background.sh  stop_demo.sh
easy_turn/: __init__.py  config.yaml  features.py  service.py
easy_turn/gxl_ai_utils/utils/: utils_file.py
easy_turn/wenet/dataset/: dataset.py  processor.py
easy_turn/wenet/llm_asr/: downsampler.py  init_llmasr.py  llmasr_model.py  utils4llmasr.py
easy_turn/wenet/squeezeformer/: conv2d.py
easy_turn/wenet/transformer/: asr_model.py  embedding.py  encoder.py  subsampling.py  swish.py
easy_turn/wenet/utils/: common.py  (+6 more)
full_duplex_demo/: app.py  config.py  main.py  prompt.txt  prompt_listen_speak.txt  prompt_listen_speak_2.txt
full_duplex_demo/routes/: pages.py  ws.py
full_duplex_demo/services/: audio_utils.py  qwen_client.py
full_duplex_demo/static/: index.html
realtime_audio_demo/: __init__.py  config.py  events.py  main.py  session_store.py  sessions.py
realtime_audio_demo/routes/: audio.py  chat.py  pages.py  request_utils.py
realtime_audio_demo/services/: __init__.py  component_tools.py  intent_skill_router.py  output_filter.py  qwen.py  silero_vad.py  skill_loader.py  text_chat.py
realtime_audio_demo/utils/: audio.py
realtime_demo/: __init__.py  app.py  config.py
realtime_demo/routes/: __init__.py  pages.py  ws.py
realtime_demo/static/: realtime.html
static/: chat.html  chatbox.html  demo.html  index.html  realtime-audio-client.js  recorder-worklet.js
tmp_pdf_text/: MiniCPM-o 4.5.txt  Qwen3-Omni.txt  Qwen3.5-Omni.txt
(+2 files in other folders)
