[project]
name = "qwen3-omni-realtime-demo"
version = "0.1.0"
description = "Minimal FastAPI WebSocket demo for Qwen3-Omni realtime audio testing."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "silero-vad>=6.2.1",
    "uvicorn[standard]>=0.30.0",
]

[tool.uv]
package = false
