[project]
name = "qwen3-omni-realtime-demo"
version = "0.1.0"
description = "Minimal FastAPI WebSocket demo for Qwen3-Omni realtime audio testing."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "librosa>=0.11.0",
    "numpy>=2.0",
    "openai-whisper>=20250625",
    "peft>=0.19.1",
    "pyyaml>=6.0",
    "scikit-learn>=1.5.0",
    "silero-vad>=6.2.1",
    "torch>=2.1.0",
    "torchaudio>=2.1.0",
    "transformers>=4.44.0",
    "uvicorn[standard]>=0.30.0",
]

[tool.uv]
package = false
